# advent-2019-rust

./: Cargo.toml  README.md
.github/workflows/: ci.yml
src/day-1/: main.rs  puzzle-1.md
src/day-2/: main.rs  puzzle-2.md
src/day-3/: main.rs  puzzle-3.md
src/day-4/: main.rs  puzzle-4.md
src/day-5/: main.rs  puzzle-5.md
src/lib/: lib.rs
