[package]
name = "advent_2019"
version = "0.1.0"
authors = ["pierreyoda@users.noreply.github.com"]
edition = "2021"

[lib]
name = "advent_2019_common"
path = "src/lib/lib.rs"

[[bin]]
name = "day-1"
path = "src/day-1/main.rs"
[[bin]]
name = "day-2"
path = "src/day-2/main.rs"
[[bin]]
name = "day-3"
path = "src/day-3/main.rs"
[[bin]]
name = "day-4"
path = "src/day-4/main.rs"
[[bin]]
name = "day-5"
path = "src/day-5/main.rs"

[dependencies]
anyhow = "1.0.94"
colored = "3.0.0"
